wasm/fastq_cut_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp__3i7lfpx/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/e084b923e219243e9ae88bd3ab3532f14d6763d9.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/e084b923e219243e9ae88bd3ab3532f14d6763d9.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/bb4e90713b5a10aaeac14dfb37c0ec910cdc88de.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/bb4e90713b5a10aaeac14dfb37c0ec910cdc88de.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/88f293e0865a6c4928f5f52db899d1dc45a0592d.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/88f293e0865a6c4928f5f52db899d1dc45a0592d.json" for subsequent builds)
cache:INFO:  - ok
